<resources>
    <string name="app_name">IT Talent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_continue">Continuar</string>
    <string name="btn_regresar">Regresar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_already_registered">Ya tengo una cuenta</string>
    <string name="soy_talento">Soy talento</string>
    <string name="busco_talento">Busco talento</string>
    <string name="talento_desc">Soy talento en busca de oportunidades laborales y nuevos retos.</string>
    <string name="reclutador_desc">Busco el mejor talento para una empresa o proyecto.</string>
    <string name="error_invalid_email_form">"Ingresa un email válido."</string>
    <string name="error_invalid_password">Ingresa una contraseña válida de al menos 6 caracteres.</string>
    <string name="error_invalid_passwords">Las contraseñas no coinciden.</string>
    <string name="error_invalid_name">Por favor ingresa tu nombre completo</string>
    <string name="error_connection">Se ha perdido la conexión</string>
    <string name="available_connection">Vuelve a estar coenctado</string>
    <string name="error_connection_desc">Para continuar utilizando la APP se requiere conexión a internet.</string>
    <string name="inicia_sesion">Continuar con correo y contraseña</string>
    <string name="btn_iniciar_sesion">Iniciar sesión</string>
    <string name="btn_registrate"><u>Registrate</u></string>
    <string name="registrate">Registrate con correo y contraseña</string>
    <string name="hint_mail">Correo electrónico</string>
    <string name="welcome_talent">¡Bienvenido, Talento!</string>
    <string name="welcome_recruiter">¡Bienvenido, Reclutador!</string>
    <string name="hint_name">Ingresa tu nombre completo</string>
    <string name="txt_name">Ingresa tu nombre</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_passrepeat">Repite tu contraseña</string>
    <string name="tab_skills">Skills</string>
    <string name="tab_xp">Experiencia</string>
    <string name="tab_profile">Perfil</string>
    <string name="tv_role">%1$s, ¿En que rol te desenvuelves como profesional?</string>
    <string name="tv_level">Selecciona el nivel profesional con el que te sientes identificado para poder ofrecerte puestos acorde a tu trayectoria.</string>
    <string name="tv_hskills_header">Mis skills</string>
    <string name="tv_hskills_header2">Mis soft skills</string>
    <string name="hint_skills">Ingresa una hard/soft skill</string>
    <string name="tv_hskills_desc">Selecciona las habilidades tecnológicas y blandas con las que estás más familiarizado para poder brindarte una mejor oferta laboral y las empresas vean un perfil completo.</string>
    <string name="error_skills">Ingresa mínimo dos habilidades profesionales</string>
    <string name="h6_xp">Experiencia</string>
    <string name="xp_desc">Ingresa los puestos / proyectos en los que has estado, cuéntale brevemente a los reclutadores sobre tus experiencias.</string>
    <string name="hint_cargo">Cargo</string>
    <string name="hint_empresa">Empresa / Nombre del proyecto</string>
    <string name="hint_ciudad">Ciudad / Región</string>
    <string name="hint_modalidad">Modalidad del empleo</string>
    <string name="hint_tipo">Tipo de empleo</string>
    <string name="hint_wage">Rango de salario</string>
    <string name="hint_coin">Moneda</string>
    <string name="hint_inicio">Fecha de inicio:</string>
    <string name="hint_fin">Fecha de termino:</string>
    <string name="hint_mes">Mes</string>
    <string name="hint_ano">Año</string>
    <string name="btn_i_work_here">Trabajo aquí</string>
    <string name="hint_logros">Cuéntanos sobre tus aprendizajes, logros, etc.</string>
    <string name="txt_no_cargo">Se requiere un cargo</string>
    <string name="txt_no_empresa">Se requiere una empresa / proyecto</string>
    <string name="txt_no_ciudad">Ingresa la ciudad/región donde trabajaste remoto o presencialmente</string>
    <string name="txt_no_modalidad">Selecciona la modalidad en que trabajaste</string>
    <string name="txt_no_tipo">Selecciona el tipo de empleo que tuviste</string>
    <string name="txt_no_inicio">Selecciona el mes y año en el que iniciaste a trabajar en %1$s</string>
    <string name="txt_no_fin">Selecciona el mes y año en finalizaste tu trabajo o si aún trabajas en %1$s</string>
    <string name="txt_no_logros">Describe en al menos 15 palabras tus logros obtenidos, retos superados, etc.</string>
    <string name="txt_yes">Si</string>
    <string name="txt_saved_data">Datos guardados</string>
    <string name="txt_desc_xp">¿Deseas añadir otra experiencia de trabajo?</string>
    <string name="h6_perfil">Mi perfil</string>
    <string name="btn_foto"><u>Suebe una foto de perfil</u></string>
    <string name="hint_pais">País</string>
    <string name="txt_require_pais">Selecciona un país</string>
    <string name="hint_ciudad_p">Ciudad</string>
    <string name="txt_ciudad_p">Ingresa tu ciudad</string>
    <string name="hint_edad">Edad</string>
    <string name="txt_mayor_edad">Debes ser mayor de edad</string>
    <string name="txt_require_edad">Ingresa tu edad</string>
    <string name="hint_phonenum">Número de teléfono</string>
    <string name="txt_requite_phonenum">Ingresa tu número de teléfono con extensión (max 10 caracteres)</string>
    <string name="hint_correo">fulanito@correo.com</string>
    <string name="hint_desc">Resumen de tí</string>
    <string name="txt_require_desc">Ingresa un resumen de tí</string>
    <string name="btn_registrame">Registrarme</string>
    <string name="info_foto">No seleccionaste una imagen</string>
    <string name="txt_no_foto">Por favor sube una foto de perfil</string>
    <string name="txt_buscas_talento">%1$s, buscas talento para:</string>
    <string name="txt_empresarec">Ingresa el nombre de la empresa para la que trabajas:</string>
    <string name="txt_empresaorg">Nombre de la empresa / organización</string>
    <string name="txt_rolerec">Rol que desempeñas</string>
    <string name="txt_no_rolerec">Selecciona tu rol dentro de la empresa</string>
    <string name="txt_registrarempresa">Registrar una empresa</string>
    <string name="header_jobs_rec">Empleos publicados</string>
    <string name="header_jobs_tal">Empleos</string>
    <string name="subheader_jobs_rec">Activos</string>
    <string name="subheader_jobs_rec2">Pasados</string>
    <string name="btn_openall">Ver todo</string>
    <string name="hint_location">Ubicación</string>
    <string name="hint_vacancy">Número de vacantes</string>
    <string name="hint_salary">Rango aproximado de salario</string>
    <string name="btn_post">Publicar</string>
    <string name="txt_no_ciudad_ne">Ingresa la ciudad/región del empleo</string>
    <string name="txt_no_vacantes">Ingresa las vacantes disponibles</string>
    <string name="txt_no_modalidad_ne">Selecciona la modalidad del empleo</string>
    <string name="txt_no_tipo_ne">Selecciona el tipo de empleo</string>
    <string name="txt_no_salario">Selecciona el rango de salario del empleo. Ten en cuenta que son aproximaciones para guiar a los talentos.</string>
    <string name="txt_no_moneda">Selecciona la moneda en que se poagaría el salario</string>
    <string name="txt_rvjobs_vacantes">%1$s vacantes</string>
    <string name="txt_rvjobs_vacantes_old"> - %1$s vacantes</string>
    <string name="txt_rvjobs_vacantes_tal">%1$s vacantes  </string>
    <string name="txt_rvjobs_solicitantes">|  %1$d solicitantes</string>
    <string name="txt_rvjobs_solicitantes_old"> - %1$d solicitantes</string>
    <string name="txt_rvjobs_solicitantes_opj">%1$d solicitantes</string>
    <string name="txt_rvjobs_rechazados"> - %1$d rechazados</string>
    <string name="txt_rvjobs_time_horas">Hace %1$d horas</string>
    <string name="txt_rvjobs_time_min">Hace %1$d minutos</string>
    <string name="txt_rvjobs_time_dias">Hace %1$d dias</string>
    <string name="txt_rvjobs_modalidad">%1$s</string>
    <string name="txt_rvjobs_tipo"> | %1$s</string>
    <string name="txt_rvjobs_empresa">%1$s </string>
    <string name="txt_rvjobs_location">| %1$s</string>
    <string name="txt_header_talent">Software Engineer</string>
    <string name="txt_years_experience">%1$d años de experiencia</string>
    <string name="btn_editar">Editar </string>
    <string name="txt_header_empresa">Empresa</string>
    <string name="txt_header_rol">Rol Profesional</string>
    <string name="txt_hint_rol">Tu rol profesional</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="btn_cambiar_empresa"><u>Cambiar empresa</u></string>
    <string name="btn_cambiar_foto"><u>Cambiar foto</u></string>
    <string name="txt_head_cambiar_empresa">Ops!</string>
    <string name="txt_cambiar_empresa">Para cambiar de empresa debes eliminar tu cuenta y crear una nueva con tu correo profesional</string>
    <string name="txt_eliminar_cuenta">Eliminar cuenta</string>
    <string name="txt_error_editar">Para editar tu perfil activa la edición</string>
    <string name="txt_listo">Listo</string>
    <string name="txt_recluta">Reclutador:  </string>
    <string name="txt_te_has_postulado">¡ Te has postulado para: %1$s !</string>
    <string name="txt_te_has_postulado_desc">El reclutador recibirá el perfil profesional que configuraste en esta aplicación, asi como tus datos de contacto. Evaluara tu perfil y se pondrá en contacto contigo, puedes ver el status de tu postulación en <u>Postulaciones</u></string>
    <string name="txt_postulaciones_act">Postulaciones Acivas</string>
    <string name="txt_postulaciones_fin">Postulaciones finalizadas</string>
    <string name="txt_postulaciones_stgend">Proceso finalizado</string>
    <string name="txt_postulaciones_stg1">Revisión de perfil</string>
    <string name="txt_postulaciones_stg2">Etapa de entrevistas</string>
    <string name="txt_postulaciones_stg3">Pruebas y evaluaciones</string>
    <string name="txt_aceptado">Aceptado</string>
    <string name="txt_reclutador_contact">Contactar al reclutador:  </string>
    <string name="txt_contactar">¿Deseas contactar al reclutador?</string>
    <string name="txt_contactar_desc">El reclutador se encargará de contactarte mientras vayas avanzando en el proceso de postulación</string>
    <string name="btn_contactar">Contactar vía email</string>
    <string name="btn_contactar2">Contactar talento</string>
    <string name="txt_contactar_tal">¿Deseas contactar a %1$s?</string>
    <string name="txt_contactar_tal_desc">Escribe un mensaje para que Joe se interese en el empleo. Puedes ofrecer mas información sobre el cargo, proyecto, empresa, lo que requieres de el, propuestas de salario, etcétera.\nAdjunta tus datos de contacto.</string>
    <string name="txt_header_reclutamiento">Reclutamentos activos</string>
    <string name="txt_header_reclutamiento2">Reclutamentos pasados</string>
    <string name="txt_subheader1_reclut">Etapa 1: Publicados y revisión de perfiles</string>
    <string name="txt_subheader2_reclut">Etapa 2: Entrevistas</string>
    <string name="txt_subheader3_reclut">Etapa 3: Pruebas y evaluaciones</string>
    <string name="txt_subheader4_reclut">Etapa 4: Finalizados</string>
    <string name="txt_btn_next_step"><u>%1$s</u></string>
    <string name="txt_header_next_step">Siguiente etapa: Entrevistas</string>
    <string name="btn_next_step"><u>%1$d A siguiente etapa</u></string>
    <string name="btn_envia_correo">Enviar correo</string>
    <string name="txt_next_step_desc">La siguiente etapa consiste en revisar los perfiles profesionales (CV) de los candidatos al puesto de Cargo.\nAl pasar a la segunda etapa se retirara el anuncio de empleo, por lo tanto no le aparecerá a nuevos aspirantes.\n<b>¿Deseas pasar a la segunda etapa: Revisión de perfiles?</b></string>
    <string name="txt_envia_correos">Envíale correo a los solicitantes</string>
</resources>