<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="mx.mauriciogs.ittalent.ui.authentication.signup.SignUpFragment4Recruiter">

        <ImageView
            android:id="@+id/ivHeader"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/header_it_talent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView3"
            style="@style/SubtitleSecondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen32dp"
            android:text="@string/txt_empresarec"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivHeader" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="@dimen/dimen0dp"
            android:layout_height="@dimen/dimen0dp"
            android:layout_marginVertical="@dimen/dimen16dp"
            android:layout_marginHorizontal="@dimen/dimen16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/btnSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmpresa"
                style="@style/EditTextGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_empresaorg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmpresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                style="@style/TertiaryPrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen6dp"
                android:layout_gravity="end"
                android:text="@string/txt_registrarempresa"
                android:drawableEnd="@drawable/ic_baseline_question_mark_24"
                android:drawableTint="@color/info"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCargo"
                style="@style/DropdownMenuOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen6dp"
                android:hint="@string/txt_rolerec">

                <AutoCompleteTextView
                    android:id="@+id/dropdownMenuRol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/recruiters" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/btnSave"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen32dp"
            android:text="@string/btn_registrame"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>