<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvJob"
            style="@style/H5Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen16dp"
            android:layout_marginTop="@dimen/dimen16dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_te_has_postulado" />

        <TextView
            android:id="@+id/tvJobDesc"
            style="@style/Body2Secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16dp"
            android:layout_marginHorizontal="@dimen/dimen16dp"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvJob"
            android:text="@string/txt_te_has_postulado_desc" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animMsgSent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvJobDesc"
            app:layout_constraintStart_toStartOf="@+id/tvJobDesc"
            app:layout_constraintTop_toBottomOf="@+id/tvJobDesc"
            app:layout_constraintVertical_bias="0.0"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/mail_send" />

        <Button
            android:id="@+id/btnContinue"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16dp"
            android:text="@string/txt_listo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animMsgSent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>