<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/BackgroundGeneralSignIn"
        tools:context="mx.mauriciogs.ittalent.ui.authentication.signup.SignUpFragment2">

        <ImageView
            android:id="@+id/ivHeader"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/header_it_talent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvWelcome"
            style="@style/H6PrimarySignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen16dp"
            tools:text="@string/welcome_talent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivHeader" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
            app:layout_constraintVertical_bias="0.05">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otfName"
                style="@style/EditTextGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen16dp"
                android:layout_marginBottom="@dimen/dimen16dp"
                android:hint="@string/hint_name"
                app:layout_constraintBottom_toTopOf="@+id/btnContinue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otfPass1"
                style="@style/EditTextGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen16dp"
                android:layout_marginBottom="@dimen/dimen16dp"
                android:hint="@string/hint_pass"
                app:layout_constraintBottom_toTopOf="@+id/btnContinue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otfPass2"
                style="@style/EditTextGeneral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen16dp"
                android:layout_marginBottom="@dimen/dimen16dp"
                android:hint="@string/hint_passrepeat"
                app:layout_constraintBottom_toTopOf="@+id/btnContinue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/btnContinue"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
